--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~51.0.8",
-    "expo-camera": "~15.0.9",
+    "expo": "^51.0.21",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~15.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
